# socksv5_future

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  socks_fut.rs  v5.rs
tests/: tc01.rs  tc02.rs  tc03.rs  tc04.rs  tc05.rs
