[package]
name = "socksv5_future"
version = "0.1.0"
authors = ["Jochen Kiemes <jochen@kiemes.de>"]
license = "MIT"
description = "Socks v5 futures for Server and Client"
homepage = "https://github.com/gin66/socksv5_future"
repository = "https://github.com/gin66/socksv5_future"
keywords = ["socks", "server", "client", "future"]
readme = "README.md"

[dependencies]
