[package]
name = "socksv5_future"
version = "0.2.5"
authors = ["Jochen Kiemes <jochen@kiemes.de>"]
license = "MIT"
description = "Socks v5 futures for Server and Client"
homepage = "https://github.com/gin66/socksv5_future"
repository = "https://github.com/gin66/socksv5_future"
keywords = ["socks", "server", "client", "future", "tokio"]
readme = "README.md"

[dependencies]
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-timer = "0.1"

